# qqq_trading

./: .gitignore  README.md  __init__.py  config.py  pyproject.toml
.claude/: settings.local.json
cli/: pipeline.py  predict.py  refresh.py
config/: default.yaml
data/: __init__.py  daily_metrics.py  event_calendar.py  external_data.py  fomc_dates.csv  refresh.py
datasets/: check_coverage.py  collect_options.py  megacap_earnings.csv  update_parquet.py
docs/: algorithms.md  data.md  features.md  models.md  research.md  trading_guide.md
eval/: _common.py  daily_compare.py  eval_c2c_1dte.py  eval_otc_0dte.py  eval_range_0dte.py  model_eval.py  signal_report.py  test_data_quality.py
features/: __init__.py  base.py  external.py  interactions.py  path.py  registry.py
live/: __init__.py  fetch_data.py  notify.py  trader.py
models/: __init__.py  evaluation.py  prediction.py  training.py
output/: daily_metrics.parquet  external_data.parquet  report.html
output/model/: feature_columns.csv  feature_columns_premarket.csv  interaction_feature_columns.csv  next_day_2pct_model.joblib  scaler.joblib
qqq_trading/cli/: predict.py
qqq_trading/data/: event_calendar.py
qqq_trading/eval/: live_events.csv  live_premarket.csv  live_qqq.csv  live_vix.csv  live_yields.csv
qqq_trading/features/: __init__.py  external.py  interactions.py
qqq_trading/live/: trader.py
qqq_trading/models/: evaluation.py  prediction.py
qqq_trading/server/: __init__.py
research/: 01_daily_metrics.py  02_pattern_analysis.py  04_report.py  05_window_analysis.py  09_full_backtest.py  10_options_backtest.py  12_robustness_test.py  13_occam_razor.py
server/: __init__.py  __main__.py  app.py  services.py
tests/: conftest.py  test_cli_predict.py  test_config.py  test_daily_metrics.py  test_evaluation.py  test_event_calendar.py  test_feature_registry.py  test_features_base.py  test_features_external.py  test_features_interactions.py  test_features_path.py  test_prediction.py  test_splits.py  test_training.py
utils/: paths.py  plotting.py  splits.py
(+22 files in other folders)
